--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,30 @@
 layout: layout
 ---
 
+<script type="text/x-mathjax-config">
+	MathJax.Hub.Config({
+		extensions:	[
+			"MathMenu.js",
+			"MathZoom.js",
+			"AssistiveMML.js",
+			"ally/accessibility-menu.js"
+		],
+		jax: ["input/TeX", "output/CommonHTML"],
+		TeX: {
+			extensions:	[
+				"AMSmath.js",
+				"AMSsymbols.js",
+				"noErrors.js",
+				"noUndefined.js",
+			]
+		}
+	});
+</script>
+
+<script type="text/javascript" async
+	src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=Tex-MML-AM_CHTML">
+</script>
+
 <section class="content">
   <h1>
     <a href="{{ page.url }}">{{ page.title }}</a>
@@ -22,14 +46,9 @@ layout: layout
       </a>
 
       <p>
-        I'm a developer at GitHub. <a href="https://twitter.com/{{ site.twitter }}" target="_blank">Follow me on Twitter</a>;
-        you'll enjoy my tweets. I take care to carefully craft each one. Or at least aim to make
-        you giggle. Or offended. One of those two&mdash; I haven't decided which yet.
+        Post-graduate research student at the University of Glasgow, United Kingdom.<li><a href="/about.html">See about to learn more.</a></li>
       </p>
 
-      <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
-      <a href="http://twitter.com/{{ site.twitter }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter }}</a>
-      <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
     </section>
   </section>
 </section>
