--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,14 +39,12 @@ layout: layout
 
   <!-- TODO: bio here -->
   <section class="meta">
-    <h3>Discussion, links, and tweets</h3>
+    <h3>Hugh Bird</h3>
     <section class="copy">
-      <a href="https://twitter.com/{{ site.twitter }}" target="_blank">
-        <img src="{{ site.github.owner_gravatar_url }}?s=142" height="50" width="50" />
-      </a>
+        <img src="/images/VortexHeader.png" height="50" width="50" />
 
       <p>
-        Post-graduate research student at the University of Glasgow, United Kingdom.<li><a href="/about.html">See about to learn more.</a></li>
+        A Post-graduate research student at the University of Glasgow, United Kingdom.<li><a href="/about.html">About</a></li>
       </p>
 
     </section>
