--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <section class="sidebar">
   <a href="/" aria-label="Avatar">
-    <img src="/images/VortexHeader.png" height="75" width="75" class="avatar" />
+    <img src="{{ site.url }}/images/VortexHeader.png" height="75" width="75" class="avatar" />
   </a>
 
   <section class="name">
@@ -10,14 +10,15 @@
     </a>
   </section>
 
-  <section class="meta">
-    <a href="{{ site.github.owner_url }}" target="_blank" title="Follow me on GitHub" aria-label="Follow me on GitHub"><i class="fa fa-github"></i></a>
-  </section>
 
   <section class="sections">
     <ul>
-      <li><a href="/about.html">about</a></li>
-      <li><a href="/">posts</a></li>
+      <li><a href="/">Blog</a></li>
+      <li><a href="/fictionreview.html">Fiction review</a></li>
+      <li><a href="/nonfictionreview.html">Non-fiction review</a></li>
+      <li><a href="/artsreview.html">Arts review</a></li>
+      <li><a href="/about.html">About me</a></li>
     </ul>
   </section>
+  
 </section>
